fix header spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -439,11 +439,11 @@ h3 {
 h4 {
   font-size: 36px;
   font-size: 1.8rem;
-  margin: -0.8em 0 0;
 }
 h5 {
-  font-size: 24px;
-  font-size: 1.2rem;
+  font-size: 36px;
+  font-size: 1.8rem;
+  margin: -0.8em 0 0;
 }
 h6 {
   font-size: 24px;
