--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -46,7 +46,7 @@ img {
 
         h1 {
           margin-top: 0;
-          margin-bottom: 0.3em;
+          margin-bottom: 15px;
         }
         h2 {
           margin-top: 0;
