--- a/assets/less/typography.less
+++ b/assets/less/typography.less
@@ -28,10 +28,10 @@ h3 {
 }
 h4 {
 	.font-rem(36);
-	margin: -0.8em 0 0;
 }
 h5 {
-	.font-rem(24)
+	.font-rem(36);
+	margin: -0.8em 0 0;
 }
 h6 {
 	.font-rem(24);
